# ProjectTempo

./: .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  clang-format-all  compile_commands.json
extlibs/: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
extlibs/irrlicht-cmake/: CMakeLists.txt
extlibs/irrlicht-cmake/CMake/: ExampleBuild.cmake  IrrlichtVersion.cmake
extlibs/irrlicht-cmake/CMake/Compiler/: CompilerGccLikeSettings.cmake
extlibs/irrlicht-cmake/CMake/Options/: OptionDirectX9.cmake  OptionStaticLib.cmake
extlibs/irrlicht-cmake/tools/IrrFontTool/: CMakeLists.txt
src/client/: CMakeLists.txt  client_sources.cmake  main.cpp
src/client/deprecated/include/client/: LevelRenderer.hpp
src/client/deprecated/src/: Application.cpp  EntityCreationClient.cpp  LevelRenderer.cpp
src/client/deprecated/src/component/: ComponentRender.cpp
src/client/deprecated/src/system/: SystemGameInput.cpp  SystemRender.cpp  SystemRenderHealth.cpp
src/client/include/client/: EntityCreationClient.hpp
src/client/include/client/component/: ComponentGUISuggestion.hpp  ComponentHealthBar.hpp  ComponentKeyInput.hpp  ComponentRenderAttack.hpp  ComponentRenderButtonGroup.hpp  ComponentRenderSceneNode.hpp  ComponentRenderSpikes.hpp
src/client/include/client/misc/: CAxialBillboardSceneNode.h  CBatchingMesh.hpp  Camera.hpp  Color.hpp  IAxialBillboardSceneNode.h  Lighting.hpp  RGBtoHSV.hpp  RealisticWater.hpp  XZAlignedBillboardSceneNode.hpp  YAlignedBillboardSceneNode.hpp
src/client/include/client/network/: client.hpp
src/client/include/client/system/: SystemAttack.hpp  SystemButtonRenderer.hpp  SystemCombo.hpp  SystemEntity.hpp  SystemGraphicsCreation.hpp  SystemLighting.hpp  SystemMovement.hpp  SystemParseKeyInput.hpp  SystemPlayer.hpp  SystemRenderAttack.hpp  SystemRenderGUI.hpp  SystemRenderHealing.hpp  SystemRenderHealthBars.hpp  SystemRenderSceneNode.hpp  SystemRenderSpikes.hpp  SystemStageRenderer.hpp  SystemTranslationAnimation.hpp  SystemUpdateKeyInput.hpp
src/client/src/: EntityCreationClient.cpp
src/client/src/component/: ComponentGUISuggestion.cpp  ComponentHealthBar.cpp  ComponentKeyInput.cpp  ComponentRenderAttack.cpp  ComponentRenderButtonGroup.cpp  ComponentRenderSceneNode.cpp  ComponentRenderSpikes.cpp
src/client/src/misc/: CAxialBillboardSceneNode.cpp  CBatchingMesh.cpp  Camera.cpp  Color.cpp  Lighting.cpp  RGBtoHSV.cpp  RealisticWater.cpp  XZAlignedBillboardSceneNode.cpp  YAlignedBillboardSceneNode.cpp
src/client/src/network/: client.cpp
src/client/src/system/: SystemAttack.cpp  SystemButtonRenderer.cpp  SystemCombo.cpp  SystemEntity.cpp  SystemGameInput.cpp  SystemGraphicsCreation.cpp  SystemLighting.cpp  SystemMovement.cpp  SystemParseKeyInput.cpp  SystemPlayer.cpp  SystemRenderAttack.cpp  SystemRenderGUI.cpp  SystemRenderHealing.cpp  SystemRenderHealthBars.cpp  SystemRenderSceneNode.cpp  SystemRenderSpikes.cpp  SystemStageRenderer.cpp  SystemTranslationAnimation.cpp  SystemUpdateKeyInput.cpp
src/irrlicht-test/: CMakeLists.txt  FloorSceneNode.hpp  gui.hpp  main.cpp
src/lib-tempo/: CMakeLists.txt
src/lib-tempo/include/tempo/: Application.hpp  LevelManager.hpp  Tile.hpp  Types.hpp  config.hpp  constants.hpp  intrinsics.hpp  mask.hpp  model.hpp  network.hpp  networkBase.hpp  networkClient.hpp  networkQueue.hpp  networkServer.hpp  song.hpp  structures.hpp  time.hpp
src/lib-tempo/include/tempo/component/: ComponentAI.hpp  ComponentAOEIndicator.hpp  ComponentAttack.hpp  ComponentButtonGroup.hpp  ComponentCombo.hpp  ComponentGridAi.hpp  ComponentGridMotion.hpp  ComponentGridPosition.hpp  ComponentHealth.hpp  ComponentID.hpp  ComponentTeam.hpp  (+16 more)
src/lib-tempo/src/: Application.cpp  LevelManager.cpp  Tile.cpp  mask.cpp  model.cpp  network.cpp  networkBase.cpp  networkClient.cpp  networkQueue.cpp  networkServer.cpp  song.cpp  structures.cpp  time.cpp
src/lib-tempo/src/component/: ComponentAI.cpp  ComponentAOEIndicator.cpp  ComponentAttack.cpp  ComponentButtonGroup.cpp  ComponentCombo.cpp  ComponentGridAi.cpp  ComponentGridMotion.cpp  ComponentGridPosition.cpp  ComponentHealth.cpp  ComponentID.cpp  ComponentModel.cpp  ComponentParty.cpp  ComponentPickup.cpp  ComponentPlayerLocal.cpp  ComponentPlayerRemote.cpp  ComponentPlayerRemoteServer.cpp  ComponentRender.cpp  ComponentRespawn.cpp  ComponentSpikes.cpp  ComponentStage.cpp  ComponentStagePosition.cpp  ComponentStageRotation.cpp  ComponentStageTranslation.cpp  ComponentTeam.cpp  ComponentTransform.cpp  ComponentWeapon.cpp
src/lib-tempo/src/entity/: ComponentGridMotion.cpp  ComponentGridPosition.cpp  ComponentHealth.cpp  ComponentPlayerLocal.cpp  ComponentPlayerRemote.cpp  ComponentPlayerRemoteServer.cpp  ComponentTransform.cpp  EntityCreation.cpp  EntityCreationClient.cpp  EntityCreationServer.cpp  GridAi.cpp  GridMotion.cpp  Health.cpp  ID.cpp  LevelManager.cpp  LevelRenderer.cpp  PlayerInput.cpp  PlayerLocal.cpp  PlayerRemote.cpp  PlayerRemoteS.cpp  PlayerRemoteServer.cpp  Position.cpp  Render.cpp  RenderHealth.cpp  SystemAttack.cpp  SystemGridAi.cpp  SystemID.cpp  SystemPlayerLocal.cpp  SystemPlayerRemote.cpp  SystemPlayerRemoteServer.cpp  SystemRender.cpp  SystemRenderHealth.cpp  SystemTransform.cpp  TileMask.cpp  Transform.cpp  tempoID.cpp
src/lib-tempo/src/math/: fft.cpp
src/lib-tempo/src/network/: ID.cpp  QueueID.cpp  base.cpp  client.cpp  queue.cpp  server.cpp
src/lib-tempo/src/system/: SystemAttack.cpp  SystemCombo.cpp  SystemGameInput.cpp  SystemGraphicsCreation.cpp  SystemGridAi.cpp  SystemHealth.cpp  SystemID.cpp  SystemLevelManager.cpp  SystemMovement.cpp  SystemPlayer.cpp  SystemPlayerLocal.cpp  SystemPlayerRemote.cpp  SystemPlayerRemoteServer.cpp  SystemRender.cpp  SystemRenderHealth.cpp  SystemServerAttack.cpp  SystemServerPlayer.cpp  SystemTransform.cpp  SystemTrigger.cpp
src/server/: CMakeLists.txt  main.cpp
src/server/src/system/: SystemAI.cpp  SystemAttack.cpp  SystemCombo.cpp  SystemHeartbeat.cpp  SystemMovement.cpp  SystemPlayer.cpp
tests/: CMakeLists.txt  main.cpp  ostream_operators.hpp
tests/utilities/: RGBandHSV.cpp  mask.cpp
(+79 files in other folders)
