cmake_minimum_required(VERSION 2.8.12)
project("ProjectTempo")
set(GLOBAL PROPERTY USE_FOLDERS ON)

set(EXTLIBS_DIR      "${CMAKE_CURRENT_LIST_DIR}/extlibs")

set(CMAKE_MODULE_PATH
	${CMAKE_MODULE_PATH}
	"${CMAKE_CURRENT_LIST_DIR}/extlibs/ogre-1.10.8/CMake/Utils"
	"${CMAKE_CURRENT_LIST_DIR}/extlibs/ogre-1.10.8/CMake/Packages")

#Support YCM completion for Raef and Anthony
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set (CMAKE_CXX_STANDARD 11)

# :TODO: have some way of configuring this
set(CMAKE_BUILD_TYPE Debug)

set(TEMPO_LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/lib")
set(TEMPO_BIN_DIR "${CMAKE_CURRENT_LIST_DIR}/bin")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY         "${TEMPO_LIB_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   "${TEMPO_LIB_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${TEMPO_LIB_DIR}")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY         "${TEMPO_LIB_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   "${TEMPO_LIB_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${TEMPO_LIB_DIR}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         "${TEMPO_BIN_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${TEMPO_BIN_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${TEMPO_BIN_DIR}")

set(OGRE_STATIC ON)


set(TEMPO_EXTLIBS_DIR "${CMAKE_CURRENT_LIST_DIR}/extlibs")
set(TEMPO_LIB_DIR     "${CMAKE_CURRENT_LIST_DIR}/libs")

set(TEMPO_OGRE_DIR
	"${TEMPO_EXTLIBS_DIR}/ogre-1.10.9/"
)
set(TEMPO_OGRE_INCLUDE_DIR
	"${TEMPO_OGRE_DIR}/OgreMain/include;"
	"${TEMPO_OGRE_DIR}/include;"
	"${TEMPO_OGRE_DIR}/RenderSystems/GL/include;"
	"${TEMPO_OGRE_DIR}/RenderSystems/GL3Plus/include;"
	"${TEMPO_OGRE_DIR}/RenderSystems/GLSupport/include;"
)
set(TEMPO_OGRE_LIBRARY_DIR
	"${TEMPO_EXTLIBS_DIR}/ogre-1.10.9/lib;"
	"${TEMPO_EXTLIBS_DIR}/ogre-1.10.9/Dependencies/lib"
	)

set(TEMPO_SFML_DIR
	"${TEMPO_EXTLIBS_DIR}/SFML-2.4.2"
)
set(TEMPO_SFML_INCLUDE_DIR
	"${TEMPO_SFML_DIR}/include"
)

set(TEMPO_SDL2_DIR
	"${TEMPO_EXTLIBS_DIR}/SDL2-2.0.7"
)
set(TEMPO_SDL2_INCLUDE_DIR
	"${TEMPO_SDL2_DIR}/include"
)

set(TEMPO_OGRE_OVERLAY_INCLUDE_DIR
	"${TEMPO_OGRE_DIR}/Components/Overlay/include"
)

set(TEMPO_LIB_TEMPO_DIR
	"${CMAKE_CURRENT_LIST_DIR}/src/lib-tempo"
	)
set(TEMPO_LIB_TEMPO_INCLUDE_DIR
	"${TEMPO_LIB_TEMPO_DIR}/include"
	)

set(TEMPO_ANAX_DIR
	"${CMAKE_CURRENT_LIST_DIR}/extlibs/anax-1.1.1"
	)
set(TEMPO_ANAX_INCLUDE_DIR
	"${TEMPO_ANAX_DIR}/include"
)

add_subdirectory(${TEMPO_EXTLIBS_DIR})
add_subdirectory(src)

if("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)" OR CMAKE_CL_64)
	file(COPY "${TEMPO_EXTLIBS_DIR}/SFML-2.4.2/extlibs/bin/x64/openal32.dll" DESTINATION "${TEMPO_BIN_DIR}")
else ()
	file(COPY "${TEMPO_EXTLIBS_DIR}/SFML-2.4.2/extlibs/bin/x86/openal32.dll" DESTINATION "${TEMPO_BIN_DIR}")
endif ()
