cmake_minimum_required(VERSION 2.8.12)
project("ProjectTempo")
set(GLOBAL PROPERTY USE_FOLDERS ON)

set(EXTLIBS_DIR "${CMAKE_CURRENT_LIST_DIR}/extlibs")

set(CMAKE_MODULE_PATH
	${CMAKE_MODULE_PATH}
)

#Support YCM completion for Raef and Anthony
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set (CMAKE_CXX_STANDARD 11)

# :TODO: have some way of configuring this
set(CMAKE_BUILD_TYPE Debug)

cmake_host_system_information(RESULT TEMPO_MACHINE_HOSTNAME QUERY HOSTNAME)
if(${TEMPO_MACHINE_HOSTNAME} MATCHES "it[0-9]+.users.bris.ac.uk")
	message("*** WE ARE BUILDING ON A LAB MACHINE ***")
	set(TEMPO_BUILD_LAB ON)
endif()

set(TEMPO_LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/lib")
set(TEMPO_BIN_DIR "${CMAKE_CURRENT_LIST_DIR}/bin")
set(TEMPO_EXTLIBS_DIR "${CMAKE_CURRENT_LIST_DIR}/extlibs")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY         "${TEMPO_LIB_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG   "${TEMPO_LIB_DIR}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${TEMPO_LIB_DIR}")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY         "${TEMPO_LIB_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG   "${TEMPO_LIB_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${TEMPO_LIB_DIR}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY         "${TEMPO_BIN_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG   "${TEMPO_BIN_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${TEMPO_BIN_DIR}")

set(TEMPO_SFML_DIR
	"${TEMPO_EXTLIBS_DIR}/SFML-2.4.2"
)
set(TEMPO_SFML_INCLUDE_DIR
	"${TEMPO_SFML_DIR}/include"
)

set(TEMPO_SDL2_DIR
	"${TEMPO_EXTLIBS_DIR}/SDL2-2.0.7"
)
set(TEMPO_SDL2_INCLUDE_DIR
	"${TEMPO_SDL2_DIR}/include"
)

set(TEMPO_LIB_TEMPO_DIR
	"${CMAKE_CURRENT_LIST_DIR}/src/lib-tempo"
	)
set(TEMPO_LIB_TEMPO_INCLUDE_DIR
	"${TEMPO_LIB_TEMPO_DIR}/include"
	)

set(TEMPO_ANAX_DIR
	"${CMAKE_CURRENT_LIST_DIR}/extlibs/anax-1.1.1"
	)
set(TEMPO_ANAX_INCLUDE_DIR
	"${TEMPO_ANAX_DIR}/include"
	)

set(TEMPO_GLM_DIR
	"${CMAKE_CURRENT_LIST_DIR}/extlibs/glm"
	)
set(TEMPO_GLM_INCLUDE_DIR
	"${TEMPO_GLM_DIR}"
)

set(TEMPO_IRRLICHT_DIR
	"${CMAKE_CURRENT_LIST_DIR}/extlibs/irrlicht-1.8.4"
)
set(TEMPO_IRRLICHT_INCLUDE_DIR
	"${TEMPO_IRRLICHT_DIR}/include"
)

add_subdirectory(${TEMPO_EXTLIBS_DIR})
add_subdirectory(src)

if("${CMAKE_GENERATOR}" MATCHES "(Win64|IA64)" OR CMAKE_CL_64)
	file(COPY "${TEMPO_EXTLIBS_DIR}/SFML-2.4.2/extlibs/bin/x64/openal32.dll" DESTINATION "${TEMPO_BIN_DIR}")
else ()
	file(COPY "${TEMPO_EXTLIBS_DIR}/SFML-2.4.2/extlibs/bin/x86/openal32.dll" DESTINATION "${TEMPO_BIN_DIR}")
endif ()

add_custom_target(copy_compile_commands ALL)
add_custom_command(
	TARGET copy_compile_commands POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy
		${CMAKE_BINARY_DIR}/compile_commands.json
		${CMAKE_CURRENT_LIST_DIR}/compile_commands.json)
